draft winter posts

--- a/content/en/blog/2024-fall.md
+++ b/content/en/blog/2024-fall.md
@@ -10,6 +10,7 @@ Our key dates for this year are:
 
 - November 2 : [Robot Rumble](https://www.techvalleyfirst.org/robotrumble/) at Ballston Spa High School.
 <!-- - March 6-8 : [NY Hudson Valley Regional](https://www.nysfirst.org/hudson-valley) at Rockland Community College. -->
+- March 13-16 : [Finger Lakes Regional](https://www.nysfirst.org/fingerlakes) at Rochester Insitute of Technology.
 - March 26-29 : [NY Tech Valley Regional](https://www.techvalleyfirst.org/) at MVP Arena, Albany.
 
 | Monday  | Tuesday               | Wednesday           | Thursday | Friday                 | Saturday               | Sunday                  |
