fix video links

--- a/content/en/blog/2025-mid.md
+++ b/content/en/blog/2025-mid.md
@@ -8,4 +8,4 @@ author: alextopher
 
 Hello everyone, please join Karina to learn more about our progress this season.
 
-{{< video src="https://tvhs.us-east-1.linodeobjects.com/vid/parents25.mp4" >}}
+{{< video src="https://tvhs.us-east-1.linodeobjects.com/vid/mid25.mp4" >}}
